crates/pixi/tests/integration_rust/snapshots/integration_rust__project_tests__parse_project-2.snap
---
source: crates/pixi/tests/integration_rust/project_tests.rs
expression: "dependency_names(&project, Platform::OsxArm64)"
---
[
    "all",
    "osx_arm64",
    "all_macos",
    "all_unix",
]
