crates/pixi/tests/integration_rust/snapshots/integration_rust__project_tests__parse_project.snap
---
source: crates/pixi/tests/integration_rust/project_tests.rs
expression: "dependency_names(&project, Platform::Linux64)"
---
[
    "all",
    "linux",
    "all_linux",
    "all_unix",
]
